tests/sema/fail/ref_mut_immutable.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  const int a = 1;
  &mut a;
  return 0;
}
